# db-sicred

./: README.MD  README.md  REFERENCIAS.md  pyproject.toml  requirements.txt
script/best_performance/: question1.py  question2.py
script/best_performance/data/: question1_test_results.md  question2_test_results.md
script/worst_performance/: question1.py  question2.py
script/worst_performance/data/: question1_test_results.md  question2_test_results.md
src/: question1.py  question2.py  worst_question1.py  worst_question2.py
tests/: test_question1.py  test_question2.py  test_worst_question1.py  test_worst_question2.py
