[tool.poetry]
name = "db-sicred"
version = "0.1.0"
description = ""
authors = ["alfmorais <alfredneto@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
taskipy = "^1.12.2"
pre-commit = "^3.7.0"

[tool.taskipy.tasks]
install = { cmd = "pip install -r requirements.txt", help = "install packages with pip" }
test = { cmd = "export PYTHONDONTWRITEBYTECODE=1 && pytest -vvv", help = "runs all unit tests" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
